[gd_scene load_steps=4 format=3 uid="uid://4d6flvbws1q4"]

[ext_resource type="Script" uid="uid://bd80up3oagytd" path="res://ui/store/store_ui.gd" id="1_kv461"]
[ext_resource type="FontFile" uid="uid://ca45dnpmcfk5l" path="res://ui/Fonts/Teko-Medium.ttf" id="3_1w4gj"]
[ext_resource type="PackedScene" uid="uid://dcbjkfyxpxvg2" path="res://ui/store/store_button.tscn" id="3_kv461"]

[node name="StoreUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kv461")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="UpgradeGrind" parent="VBoxContainer" instance=ExtResource("3_kv461")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="UpgradeSpeed" parent="VBoxContainer" instance=ExtResource("3_kv461")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
stat_type = 1

[node name="UpgradeTrick" parent="VBoxContainer" instance=ExtResource("3_kv461")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
stat_type = 2

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.351563, 0.351563, 0.351563, 1)
theme_override_fonts/font = ExtResource("3_1w4gj")
text = "CLOSE"
flat = true

[node name="OpenButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_1w4gj")
theme_override_font_sizes/font_size = 20
text = "Open Store"

[connection signal="on_store_button_pressed" from="VBoxContainer/UpgradeGrind" to="." method="_on_upgrade_stat"]
[connection signal="on_store_button_pressed" from="VBoxContainer/UpgradeSpeed" to="." method="_on_upgrade_stat"]
[connection signal="on_store_button_pressed" from="VBoxContainer/UpgradeTrick" to="." method="_on_upgrade_stat"]
[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="OpenButton" to="." method="_on_open_button_pressed"]
